src/test/ui/rfc-2093-infer-outlives/reference.stderr
error: rustc_outlives
  --> $DIR/reference.rs:4:1
   |
LL | / struct Foo<'a, T> {
LL | |     bar: &'a T,
LL | | }
   | |_^
   |
   = note: T : 'a

error: aborting due to previous error

